--- a/styles/main.css
+++ b/styles/main.css
@@ -570,7 +570,7 @@ label {
 .header {
   position: relative;
   height: 880px;
-  background-image: linear-gradient(0deg, rgba(51, 51, 51, 0.55), rgb(51, 51, 51)), url("../img/lazer.jpg");
+  background-image: linear-gradient(0deg, rgba(51, 51, 51, 0.55), rgb(51, 51, 51));
   background-position: center;
   background-repeat: repeat;
 }
@@ -835,6 +835,7 @@ label {
 .menu__title {
   margin: 0;
 }
+
 .menu__link-logo:hover {
   opacity: 0.3;
   transition: all ease 0.3s;
@@ -1408,6 +1409,11 @@ iframe {
 
 .info__link {
   line-height: 1.5;
+  transition: all 0.25s ease-in-out;
+}
+.info__link:hover {
+  color: #d1a954;
+  transition: all 0.25s ease-in-out;
 }
 
 .clock-svg {
@@ -2004,6 +2010,10 @@ input[type=file]::file-selector-button:hover {
   }
   .menu {
     margin-bottom: 110px;
+  }
+  .menu__title {
+    position: relative;
+    z-index: 4;
   }
   .header__content {
     width: 65%;
