--- a/styles/main.css
+++ b/styles/main.css
@@ -1012,7 +1012,6 @@ label {
   display: inline-block;
   font-size: 14px;
 }
-
 .s-link-social:hover {
   color: #d1a954;
 }
@@ -1697,6 +1696,14 @@ input[type=file]::file-selector-button:hover {
   width: 100%;
 }
 
+.s-menu__title {
+  margin: 0;
+}
+
+.s-tablet {
+  display: none;
+}
+
 .s-header__list-social {
   display: flex;
   justify-content: space-between;
@@ -1713,19 +1720,11 @@ input[type=file]::file-selector-button:hover {
 }
 
 .s-nav__inner {
-  margin-top: 30px;
+  margin-top: 70px;
 }
 
 .s-nav__list li {
   margin-bottom: 15px;
-}
-
-.s-menu__logo {
-  width: 140px;
-}
-
-.s-nav {
-  height: 170px;
 }
 
 @media (min-width: 560px) {
@@ -1837,6 +1836,12 @@ input[type=file]::file-selector-button:hover {
   .ware__card {
     width: 47%;
   }
+  .s-menu__title {
+    margin-right: 40px;
+  }
+  .s-header__block:nth-child(2) {
+    margin-top: 20px;
+  }
 }
 
 @media (min-width: 768px) {
@@ -1928,6 +1933,11 @@ input[type=file]::file-selector-button:hover {
     text-align: start;
     margin: 0;
   }
+  .s-link-social {
+    display: block;
+    padding-left: 40px;
+    line-height: 1.5;
+  }
   .header__form-container {
     width: 320px;
     margin: 0;
@@ -1978,6 +1988,24 @@ input[type=file]::file-selector-button:hover {
   }
   .calculation__form-container {
     width: 35%;
+  }
+  .s-menu__title {
+    margin-right: 50px;
+  }
+  .s-tablet {
+    display: block;
+  }
+  .s-header__list-social {
+    flex-wrap: wrap;
+    justify-content: flex-end;
+  }
+  .s-header__item-social {
+    width: 50%;
+  }
+  .s-link-social--svg {
+    position: absolute;
+    left: 0;
+    top: 0;
   }
 }
 
