--- a/styles/main.css
+++ b/styles/main.css
@@ -1664,78 +1664,27 @@ input[type=file]::file-selector-button:hover {
   color: rgba(0, 0, 0, 0.61);
 }
 
+.s-header {
+  height: auto;
+}
+
 .s-header__container {
   margin: 0 auto;
-  background-color: #292b2c;
+  background-color: #363839;
 }
 
 .s-menu {
-  flex-wrap: wrap;
-  padding: 30px 0 0 0;
-}
-
-.s-header__list-lang {
-  display: flex;
-}
-
-.s-header__item-lang {
-  font-size: 16px;
-  margin-left: 15px;
-}
-.s-header__item-lang:hover {
-  transition: 0.3s;
-  color: #D1A954;
-}
-
-.s-header__block {
+  position: relative;
   display: flex;
   justify-content: space-between;
-  width: 100%;
-}
-
-.s-menu__title {
-  margin: 0;
-}
-
-.s-tablet {
-  display: none;
-}
-
-.s-header__list-social {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
   align-items: center;
+  margin-bottom: 30px;
+  padding-top: 10px;
+  margin-bottom: 0;
 }
 
-.s-header__item-social {
-  position: relative;
-}
-
-.s-link-social--svg {
-  position: relative;
-}
-
-.s-nav__inner {
-  margin-top: 70px;
-}
-
-.s-nav__list li {
-  margin-bottom: 15px;
-}
-
-.s-nav {
-  position: relative;
-  padding-left: 20px;
-  background-color: gray;
-  height: 200px;
-  align-items: center;
-  text-align: center;
-}
-
-.s-nav__list {
-  height: 200px;
-  text-align: center;
+.red {
+  background-color: rebeccapurple;
 }
 
 @media (min-width: 560px) {
@@ -1846,12 +1795,6 @@ input[type=file]::file-selector-button:hover {
   }
   .ware__card {
     width: 47%;
-  }
-  .s-menu__title {
-    margin-right: 40px;
-  }
-  .s-header__block:nth-child(2) {
-    margin-top: 20px;
   }
 }
 
@@ -1999,25 +1942,6 @@ input[type=file]::file-selector-button:hover {
   }
   .calculation__form-container {
     width: 35%;
-  }
-  .s-menu__title {
-    margin-right: 50px;
-  }
-  .s-tablet {
-    display: block;
-  }
-  .s-header__list-social {
-    flex-wrap: wrap;
-    justify-content: flex-end;
-  }
-  .s-header__item-social {
-    width: 50%;
-    font-size: 16px;
-  }
-  .s-link-social--svg {
-    position: absolute;
-    left: 0;
-    top: 0;
   }
 }
 
@@ -2207,15 +2131,6 @@ input[type=file]::file-selector-button:hover {
   }
   .ware__card {
     width: 30%;
-  }
-  .s-header__list-social {
-    width: 60%;
-    justify-content: flex-end;
-  }
-  .s-header__item-social {
-    width: 230px;
-    font-size: 16px;
-    margin-left: 30px;
   }
 }
 
