--- a/styles/main.css
+++ b/styles/main.css
@@ -438,7 +438,7 @@ label {
 .container {
   margin: 0 auto;
   max-width: 1248px;
-  padding: 0 25px;
+  padding: 0 15px;
 }
 
 .section {
@@ -584,9 +584,6 @@ label {
 .header {
   position: relative;
   height: 880px;
-  background-image: linear-gradient(0deg, rgba(51, 51, 51, 0.55), rgb(51, 51, 51));
-  background-position: center;
-  background-repeat: repeat;
 }
 .header__container {
   margin: 0 auto;
@@ -595,10 +592,12 @@ label {
   z-index: 0;
   height: 100%;
   width: 100%;
-  position: fixed;
+  background-attachment: fixed;
+  position: absolute;
   background-image: linear-gradient(0deg, rgba(51, 51, 51, 0.6), #292b2c), url("../img/lazer.jpg");
-  background-position: center;
-  background-repeat: repeat;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .burger-btn {
@@ -913,7 +912,7 @@ label {
   margin-bottom: 30px;
 }
 .header__inner {
-  padding: 40px 15px;
+  padding: 20px 15px;
   background-color: rgba(51, 51, 51, 0.65);
   border-radius: 20px;
 }
@@ -1016,6 +1015,22 @@ label {
   fill: #d1a954;
 }
 
+.link--active {
+  position: relative;
+  padding-bottom: 6px;
+  color: rgba(255, 255, 255, 0.61);
+}
+.link--active::before {
+  content: "";
+  position: absolute;
+  bottom: -3px;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  border-radius: 10px;
+  background: linear-gradient(90deg, rgb(110, 75, 75) 0%, rgb(112, 51, 51) 100%);
+}
+
 .header__form-container {
   z-index: 1;
   margin: 0 auto;
@@ -1086,8 +1101,8 @@ label {
   position: absolute;
   bottom: 0;
   margin: 20px 30px;
-  padding: 10px 18px;
-  text-align: center;
+  padding: 7px 15px;
+  text-align: start;
 }
 .services__name::after {
   content: "";
@@ -1107,7 +1122,6 @@ label {
   bottom: 0;
   left: 0;
   width: 100%;
-  text-transform: uppercase;
   color: #fff;
   letter-spacing: 0.1em;
   line-height: 1.3em;
@@ -1208,6 +1222,7 @@ picture {
 .section__title {
   font-size: 26px;
   font-weight: 400;
+  line-height: 1.3;
   text-align: center;
   text-transform: uppercase;
   letter-spacing: 1px;
@@ -1358,6 +1373,7 @@ picture {
 }
 
 .partners__background {
+  background-attachment: fixed;
   position: absolute;
   width: 100%;
   height: 100%;
@@ -1667,8 +1683,16 @@ input[type=file]::file-selector-button:hover {
   color: rgba(0, 0, 0, 0.61);
 }
 
-.s-header {
-  height: auto;
+.s-header__background {
+  z-index: 0;
+  width: 100%;
+  height: 100%;
+  background-attachment: fixed;
+  position: absolute;
+  background-image: linear-gradient(0deg, rgba(51, 51, 51, 0.6), #292b2c), url("../img/services-header1.jpg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .s-header__nav {
@@ -1690,22 +1714,13 @@ input[type=file]::file-selector-button:hover {
   margin-bottom: 0;
 }
 
-.red {
-  background-color: rebeccapurple;
-}
-
 .s-services {
   margin-top: 0;
   margin-bottom: 0;
 }
 
-.a-header__background {
-  z-index: 0;
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  background-image: linear-gradient(0deg, rgba(51, 51, 51, 0.6), #292b2c), url("../img/services-header.jpg");
-  background-position: center;
+.u-header {
+  position: relative;
 }
 
 @media (min-width: 560px) {
@@ -1726,7 +1741,7 @@ input[type=file]::file-selector-button:hover {
     padding: 20px 50px;
   }
   .header {
-    height: 800px;
+    height: 700px;
   }
   .burger-btn {
     width: 40px;
@@ -1758,11 +1773,11 @@ input[type=file]::file-selector-button:hover {
     margin-left: 17px;
   }
   .nav {
-    height: 800px;
+    height: 700px;
     width: 320px;
   }
   .nav__active {
-    height: 800px;
+    height: 700px;
     -webkit-transform: translateX(-40px);
             transform: translateX(-40px);
   }
@@ -1836,22 +1851,17 @@ input[type=file]::file-selector-button:hover {
     margin: 0;
     margin-top: 20px;
   }
-  .header {
-    height: 700px;
-  }
   .burger-btn-active {
     -webkit-transform: translateX(220px);
             transform: translateX(220px);
   }
   .nav {
-    height: 700px;
     width: 360px;
     justify-content: flex-start;
     -webkit-transform: translateX(-400px);
             transform: translateX(-400px);
   }
   .nav__active {
-    height: 700px;
     -webkit-transform: translateX(-30px);
             transform: translateX(-30px);
   }
@@ -1870,7 +1880,7 @@ input[type=file]::file-selector-button:hover {
     margin-bottom: 50px;
   }
   .menu__logo {
-    width: 200px;
+    width: 170px;
   }
   .header__content--container {
     display: flex;
@@ -1878,7 +1888,7 @@ input[type=file]::file-selector-button:hover {
     min-height: 360px;
   }
   .header__content {
-    width: 55%;
+    width: 54%;
     margin-bottom: 0;
     margin-right: 20px;
   }
@@ -2084,7 +2094,7 @@ input[type=file]::file-selector-button:hover {
   .header__content {
     width: 65%;
     margin-bottom: 0;
-    margin-right: 40px;
+    margin-right: 34px;
   }
   .header__content-title {
     width: auto;
@@ -2100,8 +2110,9 @@ input[type=file]::file-selector-button:hover {
             transform: scale(1);
   }
   .services__name-link {
-    font-size: 1.1em;
+    font-size: 18px;
     padding: 0 20px;
+    text-transform: uppercase;
   }
   .services__img {
     max-height: 330px;
@@ -2175,7 +2186,7 @@ input[type=file]::file-selector-button:hover {
     margin-bottom: 0;
   }
   .nav__item {
-    margin-left: 55px;
+    margin-left: 40px;
   }
   .nav__list-social {
     height: 90 0px;
