--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*
 Where ever you're wanting to use a z-index value, 
 name it the same as your class and add in it into your variables/setting file, 
@@ -586,9 +587,11 @@ label {
   position: relative;
   height: 880px;
 }
+
 .header__container {
   margin: 0 auto;
 }
+
 .header__background {
   z-index: 0;
   height: 100%;
@@ -1826,6 +1829,22 @@ input[type=file]::file-selector-button:hover {
   font-size: 12px;
 }
 
+.c-header {
+  height: 450px;
+}
+
+.c-header__background {
+  background-image: linear-gradient(0deg, rgba(51, 51, 51, 0.6), #292b2c), url("../img/gallery-6.jpg");
+}
+
+.c-header__content-title {
+  font-size: 35px;
+}
+
+.c-header__content-text {
+  font-size: 18px;
+}
+
 @media (min-width: 560px) {
   body {
     font-size: 16px;
@@ -1947,6 +1966,15 @@ input[type=file]::file-selector-button:hover {
   }
   .a-privilege__text {
     font-size: 14px;
+  }
+  .с-header__content {
+    margin-top: 130px;
+  }
+  .c-header__content-title {
+    font-size: 50px;
+  }
+  .c-header__content-text {
+    font-size: 20px;
   }
 }
 
@@ -2092,6 +2120,18 @@ input[type=file]::file-selector-button:hover {
   }
   .a-gallery {
     grid-template-columns: 1fr 1fr 1fr;
+  }
+  .c-header {
+    height: 700px;
+  }
+  .с-header__content {
+    margin-top: 50px;
+  }
+  .c-header__content-title {
+    font-size: 50px;
+  }
+  .c-header__content-text {
+    font-size: 20px;
   }
 }
 
@@ -2304,6 +2344,15 @@ input[type=file]::file-selector-button:hover {
   .a-privilege__text {
     grid-template-columns: 1fr 1fr 1fr 1fr;
   }
+  .с-header__content {
+    padding: 50px;
+  }
+  .c-header__content-title {
+    font-size: 80px;
+  }
+  .c-header__content-text {
+    font-size: 25px;
+  }
 }
 
 @media (min-width: 1248px) {
@@ -2343,5 +2392,8 @@ input[type=file]::file-selector-button:hover {
   }
   .info__block {
     width: 24%;
+  }
+  .с-header__content {
+    padding: 50px;
   }
 }
