--- a/styles/main.css
+++ b/styles/main.css
@@ -495,8 +495,9 @@ ul {
 .button {
   position: relative;
   display: block;
-  padding: 15px 40px;
+  height: 50px;
   border: none;
+  border-radius: 0;
   text-transform: uppercase;
   background-color: #D1A954;
   color: #ffffff;
@@ -2114,7 +2115,6 @@ input[type=file]::file-selector-button:hover {
   }
   .button {
     width: 100%;
-    padding: 20px 50px;
   }
   .header {
     height: 700px;
